Address data race in s2 IncrementQueryCount() method

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-05-27
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There is a data race in s2's incrementQueryCount() method, which makes it possible for the query_count_ variable to be updated at the same time by multiple threads. To fix this, make query_count_ an atomic (should be faster than a mutex)

            Assignee:
            Lynne Wang
            Reporter:
            Lynne Wang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: