SERVER-90829 Make query_count_ an atomic int (#22529)

GitOrigin-RevId: b7ce3c0778dfbe1c9bf9eac1734a1d6f2ee1cb43