src/third_party/s2/s2edgeindex.h
@@ -5,6 +5,8 @@
 #ifndef UTIL_GEOMETRY_S2EDGEINDEX_H_
 #define UTIL_GEOMETRY_S2EDGEINDEX_H_
 
+#include <atomic>
+
 #include <map>
 using std::map;
 using std::multimap;
@@ -225,7 +227,7 @@ class S2EdgeIndex {
   bool index_computed_;
 
   // Number of queries so far
-  int query_count_;
+  std::atomic<int> query_count_;
 
   DISALLOW_COPY_AND_ASSIGN(S2EdgeIndex);
 };
